# neurotutorsim

./: .gitignore  00_bootstrap_colab.ipynb  ARCHITECTURE.md  README.md  pyproject.toml
data/: DATA_DICTIONARY.md
data/interim/units/: be_001.json
data/processed/: units.csv
notebooks/: 00_bootstrap_colab.ipynb  00_tribe_demo.ipynb
scripts/: build_units_csv.py  run_slice.py
src/generation/: features.py  matching.py  stimulus_io.py
src/validation/: checks.py  test_validators.py  validators.py
stimuli/ai_scaffolding/: be_001_primary.txt
stimuli/ai_substitution/: be_001_primary.txt
stimuli/traditional/: be_001_primary.txt
tests/: test_be_001_unit.py  test_checks.py  test_features.py  test_imports.py  test_matching.py  test_stimulus_io.py
